@@ -4188,4 +4188,17 @@ Failed: error 125 at offset 2: lookbehind assertion is not fixed length
 
 /XȀ/x,utf
 
+# These three test a bug fix that was not clearing up after a locale setting
+# when the test or a subsequent one matched a wide character.
+
+//locale=C
+
+/[\P{Yi}]/utf
+\x{2f000}
+ 0: \x{2f000}
+
+/[\P{Yi}]/utf,locale=C
+\x{2f000}
+ 0: \x{2f000}
+
 # End of testinput5 
